Navbar collapse fix

--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -115,6 +115,9 @@ margin-right: 20px;
 }
 
 @media (max-width: 768px) {
+    .navbar-right{
+        margin: 0 !important;
+    }
     .navbar-header {
         float: none;
     }
@@ -124,6 +127,9 @@ margin-right: 20px;
     .navbar-collapse {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
     }
     .navbar-nav {
         float: none!important;
@@ -136,7 +142,15 @@ margin-right: 20px;
         padding-top: 10px;
         padding-bottom: 10px;
     }
-    .navbar-right{
-    margin: 0;
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in { 
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
     }
 }
